# salty

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  haase.h  netlify.toml  requirements.txt  salty.h  salty.hpp
.builds/: archlinux.yml  freebsd.yml  main.yml
.circleci/: config.yml
.github/: CONTRIBUTING.md
.github/workflows/: cd-test.yml  cd.yml  ci.yml
asm/: fe25519_add.s
book/: book.toml  netlify.toml
book/src/: SUMMARY.md  c-api.md  overview.md  preface.md  references.md  testing.md
c-api/: .gitignore  Cargo.toml  Makefile  README.md  cbindgen.toml  salty.h  salty.hpp
c-api/example/: .gitignore  Makefile  example.c  link.x  musca-b1.ld  rules.mk
c-api/src/: lib.rs
haase/: attributesForCortexM4.inc  bigint.c  bigint.h  cortex_m4_hsalsa20_block.S  cortex_m4_mpy_fe25519.S  cortex_m4_sqr_fe25519.S  crypto_target_config.h  crypto_target_config_cortexM4.h  fe25519.c  fe25519.h  fe25519_invert.c  fe25519_pow2523.c  randombytes.h  sc25519.c  sc25519.h
qemu-tests/: Cargo.toml  Makefile  README.md  memory.x
qemu-tests/.cargo/: config
qemu-tests/src/: ed25519.rs  main.rs  x25519.rs
scripts/: assemble.sh  format_hexstring_as_u8s.py
src/: agreement.rs  capi.rs  constants.rs  curve.rs  curve_old.rs  edwards.rs  field.rs  field_common.rs  field_haase.rs  hash.rs  keys.rs  lib.rs  montgomery.rs  prelude.rs  scalar.rs  scalar29.rs  scratch.rs  sign.rs  signature.rs  tests.rs  traits.rs  types.rs
src/field/: haase.rs  tweetnacl.rs  tweetnacl_raw.rs
src/implementations/: mod.rs
tests/: ed25519.rs  vectors_ed25519.rs  wycheproof_eddsa.rs  wycheproof_x25519.rs  x25519.rs
tweetnacl/: tweetnacl.c  tweetnacl.h
wycheproof/: Cargo.toml  memory.x  memory.x.stm32f4x  run.cfg  run.sh
wycheproof/.cargo/: config
wycheproof/eddsa-tests/: Cargo.toml
wycheproof/eddsa-tests-gen/: Cargo.toml
wycheproof/eddsa-tests-gen/src/: lib.rs
wycheproof/eddsa-tests/src/: lib.rs
wycheproof/eddsa-tests/tests/: reader.rs
wycheproof/macros/: Cargo.toml
wycheproof/macros/src/: lib.rs
wycheproof/parser/: Cargo.toml
wycheproof/parser/src/: lib.rs
wycheproof/src/: lib.rs  main.rs
wycheproof/tests-base/: Cargo.toml
wycheproof/tests-base/src/: lib.rs
wycheproof/types/: Cargo.toml
wycheproof/types/src/: lib.rs
wycheproof/wycheproof-gen/: Cargo.toml
wycheproof/wycheproof-gen/src/: lib.rs
wycheproof/wycheproof-tests/: Cargo.toml
wycheproof/wycheproof-tests/src/: lib.rs
wycheproof/wycheproof-tests/tests/: reader.rs
