[package]
name = "salty"
version = "0.2.0-alpha.2"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "Small, sweet, swift Ed25519 signatures for microcontrollers"
homepage = "https://salty.rs"
repository = "https://github.com/nickray/salty"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["no-std", "NaCl", "Ed25519", "cryptography", "signatures"]

[dependencies]
cosey = { version = "0.3.0", optional = true }
subtle = { version = "2.4.0", default-features = false }
zeroize = { version = "1.2.0", default-features = false }

[dev-dependencies]
hex = "0.4.2"
hex-literal = "0.2.1"
wycheproof = { path = "wycheproof" }
wycheproof-gen = { path = "wycheproof/wycheproof-gen" }
serde = "1.0"
serde_json = "1.0"
array_tool = "1.0"

[features]
slow-motion = []
cose = ["cosey"]
# # doubt this will ever finish xD
# very-long-x25519-test = []
