[package]
name = "salty-c-api"
version = "0.0.1"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "Small, sweet, swift Ed25519 signatures for microcontrollers"
repository = "https://github.com/nickray/salty"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["no-std", "NaCl", "cryptography", "signatures"]

[lib]
crate-type = ["staticlib"]

[dependencies]
salty = { path = ".." }
panic-halt = "0.2"

[features]
slow-motion = ["salty/slow-motion"]

[profile.release]
codegen-units = 1
debug = true
# using `lto = true` leads to
# warning: Linking globals named 'salty_public_key': symbol multiply defined!
# error: failed to load bc of "salty.2a057q60-cgu.0": <Paste>
lto = "thin"
opt-level = "s"
