[package]
name = "salty-c-api"
description = "Small, sweet, swift Ed25519 signatures for microcontrollers"
keywords = ["no-std", "NaCl", "cryptography", "signatures"]
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
salty.workspace = true
panic-halt.workspace = true

[features]
slow-motion = ["salty/slow-motion"]

# [profile.release]
# codegen-units = 1
# debug = true
# # using `lto = true` leads to
# # warning: Linking globals named 'salty_public_key': symbol multiply defined!
# # error: failed to load bc of "salty.2a057q60-cgu.0": <Paste>
# lto = "thin"
# opt-level = "s"
