[package]
name = "qemu-tests"
version = "0.0.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "Test salty using QEMU musca-b1"
license = "Apache-2.0 OR MIT"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-semihosting = { version = "0.5.3", features = ["exit"] }
# subtle = { version = "2.2", default-features = false }

[dependencies.salty]
path = ".."

[features]
tweetnacl = ["salty/tweetnacl"]
haase = ["salty/haase"]
