[package]
name = "qemu-tests"
description = "Test salty using QEMU musca-b1"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
hex-literal.workspace = true
salty.workspace = true
wycheproof-macros.workspace = true
wycheproof-types.workspace = true

cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-semihosting = { version = "0.5.3", features = ["exit"] }

[[bin]]
name = "ed25519"
path = "src/ed25519.rs"

[[bin]]
name = "x25519"
path = "src/x25519.rs"
