[package]
name = "wycheproof"
version = "0.1.0"
authors = ["Enrik Berkhan <Enrik.Berkhan@inka.de>"]
edition = "2018"
description = "Project Wycheproof EDDSA tests for salty."
license = "Apache-2.0 OR MIT"

[dependencies]
salty = { path = ".." }
tests-base = { path = "tests-base" }
eddsa-tests-gen = { path = "eddsa-tests-gen" }

cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-semihosting = { version = "0.5.3", features = ["exit"] }

[build-dependencies]
