[package]
name = "wycheproof"
version = "0.1.0"
authors = ["Enrik Berkhan <Enrik.Berkhan@inka.de>"]
edition = "2018"
description = "Project Wycheproof tests for salty."
license = "Apache-2.0 OR MIT"

[dependencies]
wycheproof-gen = { path = "wycheproof-gen" }

[build-dependencies]

[workspace]
members = [ "wycheproof-tests", "wycheproof-gen" ]
