[package]
name = "wycheproof"
authors = ["Enrik Berkhan <Enrik.Berkhan@inka.de>"]
description = "Project Wycheproof tests for salty: JSON parser."
edition.workspace = true
license.workspace = true
version = "0.1.0"

[dependencies]
hex-serde  = { version =   "0.1.0" }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version =  "1" }
