[package]
name = "eddsa-tests-gen"
version = "0.1.0"
authors = ["Enrik Berkhan <Enrik.Berkhan@inka.de>"]
edition = "2018"
description = "Project Wycheproof EDDSA tests for salty: generator."
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
tests-base   = { path="../tests-base" }
eddsa-tests  = { path="../eddsa-tests" }

serde_json = "1.0.59"

quote = "1.0.7"
proc-macro2 = "1.0.24"
syn = { version = "1.0.48", features=["parsing"] }
