[package]
name = "eddsa-tests"
version = "0.1.0"
authors = ["Enrik Berkhan <Enrik.Berkhan@inka.de>"]
edition = "2018"
description = "Project Wycheproof EDDSA tests for salty: JSON parser."
license = "Apache-2.0 OR MIT"

[dependencies]
serde      = { version = "1.0.117", features = ["derive"] }
hex-serde  = { version =   "0.1.0" }
serde_json = { version =  "1.0.59" }

tests-base = { path = "../tests-base" }
