[package]
name = "wycheproof-macros"
authors = ["Enrik Berkhan <Enrik.Berkhan@inka.de>"]
description = "Project Wycheproof tests for salty: generator."
edition.workspace = true
license.workspace = true
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
wycheproof.workspace = true

quote = "1"
proc-macro2 = "1"
serde_json = "1"
syn = { version = "2", features=["full"] }
