[package]
name = "wycheproof-macros"
authors = ["Enrik Berkhan <Enrik.Berkhan@inka.de>"]
description = "Project Wycheproof tests for salty: macros."
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
wycheproof-parser.workspace = true

proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn.workspace = true
