[package]
name = "wycheproof-parser"
authors = ["Enrik Berkhan <Enrik.Berkhan@inka.de>"]
description = "Project Wycheproof tests for salty: JSON parser."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
hex-serde.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
