[package]
name = "wycheproof-gen"
version = "0.1.0"
authors = ["Enrik Berkhan <Enrik.Berkhan@inka.de>"]
edition = "2018"
description = "Project Wycheproof tests for salty: generator."
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
wycheproof-tests  = { path="../wycheproof-tests" }

serde_json = "1"

quote = "1"
proc-macro2 = "1"
syn = { version = "2", features=["full"] }
